src/App.css
/* ... */
/* HEADER */

.header {
  display: flex;
  justify-content: space-between;
  padding: 1em;
}

.header__logo {
  font-size: 3rem;
}

/* NAVIGATION */
.nav {
  position: fixed;
  background: var(--clr-darkest);
  color: var(--clr-light);
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 100;

  transform: translateX(100%);
  transition: transform 250ms cubic-bezier(0.5, 0, 0.5, 1);
}

.nav__list {
  list-style: none;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}

.nav__link {
  color: inherit;
  font-weight: var(--fw-bold);
  font-size: var(--fs-h3);
  letter-spacing: 3px;
  text-decoration: none;
  padding: 2rem;

  transition: all 350ms linear;
}

.nav__link:hover {
  color: var(--clr-accent);
}

.header__nav-toggle {
  height: 16px;
  background-color: rgba(102, 14, 243, 0.9);
  padding: 1.5rem 0.7rem;
  border-radius: 100%;
  position: fixed;
  right: 10px;
  z-index: 1000;
}

.header__nav-toggle:hover {
  cursor: pointer;
}

.header__nav-menu {
  display: block;
  position: relative;
}

.header__nav-menu,
.header__nav-menu::after,
.header__nav-menu::before {
  background: var(--clr-accent);
  width: 2em;
  height: 2px;
  border-radius: 1rem;

  transition: transform 250ms ease-in-out;
}

.header__nav-menu::after,
.header__nav-menu::before {
  content: '';
  position: absolute;
  left: 0;
  right: 0;
}

.header__nav-menu::before {
  top: 6px;
}

.header__nav-menu::after {
  bottom: 6px;
}

@media screen and (max-width: 700px) {
  .header__nav-toggle {
    padding: 1rem 0.4rem;
    right: 10px;
  }
  .header__nav-menu,
  .header__nav-menu::after,
  .header__nav-menu::before {
    width: 1.5em;
    height: 2px;
  }
}

/* OPENING NAV  */
.nav-open .nav {
  transform: translateX(0);
}

.nav-open .header__nav-toggle {
  position: fixed;
}

.nav-open .header__nav-menu {
  transform: rotate(45deg);
}

.nav-open .header__nav-menu::before {
  transform: rotate(90deg) translate(-6px);
}

.nav-open .header__nav-menu::after {
  opacity: 0;
}
/*  */
/* Intro Section */
.intro {
  position: relative;
}

.intro__image {
  box-shadow: var(--box-shadow-purple);
}

@media (max-width: 599px) {
  .intro__image {
    display: none;
  }

  .intro {
    margin-bottom: -2rem;
  }

  .section__title--intro {
    text-align: center;
  }

  .section__subtitle--intro {
    text-align: center;
  }
}

@media (min-width: 600px) {
  .intro {
    display: grid;
    width: min-content;
    margin: 0 auto;
    grid-column-gap: 1.5rem;
    grid-template-areas:
      'img title'
      'img subtitle';

    grid-template-columns: min-content max-content;
  }

  .intro__image {
    grid-area: img;
    min-width: 18rem;
    border-radius: 0.5rem;
  }

  .section__title--intro {
    align-self: center;
    grid-area: title;
  }

  .section__subtitle--intro {
    align-self: start;
    grid-column: -1 / 1;
    grid-row: 2;
    text-align: right;
    width: calc(100% + 2.2em);
    position: relative;
    left: -1.8em;
    top: -1.5em;
    z-index: -1;
  }
}

.section__title--services,
.service__title {
  font-family: var(--ff-primary);
  letter-spacing: 1px;
  color: var(--clr-accent-secondary);
}

@media (min-width: 800px) {
  .section__title--intro {
    align-self: start;
    grid-area: title;
  }
}

/* SERVICES */
.services__container {
  padding: 1.5rem;
}

.my-services {
  max-width: 65rem;
  width: 90%;
  text-align: center;
  margin: 0 auto 1.5rem;
  border-radius: 0.6rem;
  color: var(--clr-darkest);
  box-shadow: var(--box-shadow-all);
  position: relative;
}

.section__title--services::after {
  content: '';
  background-color: var(--clr-accent-secondary);
  display: block;
  width: 50%;
  height: 1px;
  margin: 0.5em auto 1em;
  opacity: 0.5;
}

.service__title,
.service__content {
  text-align: left;
}

.services__background {
  background-color: var(--clr-dark);
  background: linear-gradient(
      180deg,
      rgb(18, 189, 180),
      rgb(50, 87, 209),
      rgb(19, 177, 90)
    ),
    url(./images/humanoid-circuit.png);
  border-radius: 0.6rem;
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  background-blend-mode: multiply;
  background-attachment: fixed;
  opacity: 0.15;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
}

.service {
  max-width: 30rem;
  width: 30%;
  margin: 0 auto;
}

@media screen and (max-width: 900px) {
  .service {
    width: 100%;
  }
}

@media (min-width: 900px) {
  .services {
    display: flex;
    gap: 1rem;
    justify-content: center;
    max-width: 65rem;
  }
}

/* ABOUT */
.about {
  overflow-x: hidden;
  max-width: 58rem;
  margin: 0 auto;
}

.about__image {
  box-shadow: var(--box-shadow);
}

.section__subtitle--about {
  position: relative;
  padding-left: 2em;
  left: -0.5em;
}

@media (min-width: 900px) {
  .about {
    display: grid;
    grid-template-columns: 1fr 250px;
    grid-column-gap: 1.5rem;
    grid-template-areas:
      'title img'
      'subtitle img'
      'text img';
  }

  .section__title--about,
  .section__subtitle--about {
    grid-column: 1;
  }

  .section__title--about {
    grid-area: title;
  }

  .section__subtitle--about {
    grid-column: 1 / -1;
    grid-row: 2;
    position: relative;
    left: -0.5em;
    width: calc(100% + 4em);
    padding-left: 2em;
    padding-right: calc(200px + 4em);
    z-index: -1;
  }

  .about__image {
    grid-area: img;
    position: relative;
    left: -1em;
    grid-row: 1 / -1;
    grid-column: 2;
  }
}

@media (max-width: 899px) {
  .about__image {
    display: none;
  }

  .section__title--about {
    text-align: center;
  }

  .section__subtitle--about {
    text-align: center;
    padding: 0.5rem 0.5rem;
    left: 0;
    width: 100%;
  }
}
/* ... */

